# skipole

./: .hgignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  skipole.py
docs/: endcall.html  failpage.html  getting_started.html  goto.html  index.html  pagedata.html  pythoncode.html  sectiondata.html  servefile.html  servererror.html  skicall.html  startcall.html  submitdata.html  validateerror.html
docs/css/: w3-theme-ski.css
docs/examples/: gnuplot.html  gnuplot2.html  index.html  matplotlib.html  matplotlib2.html
docs/exceptions/: failpage.html  goto.html  index.html  servefile.html  servererror.html  validateerror.html
docs/servers/: basicpi.html  index.html  nginxuwsgi.html  nginxwaitress.html  poundwaitress.html  suggestions.html
docs/skiadmin/: index.html  navigation.html  root.html  screenshots.html
skipole/: __init__.py  __main__.py  skis.py  textblocks.py
skipole/ski/: dump_project.py  excepts.py  folder_class_definition.py  page_class_definition.py  project_class_definition.py  read_json.py  skiboot.py  tag.py
skipole/skiadmin/: __init__.py
skipole/skilift/: __init__.py  editfolder.py  editpage.py  editresponder.py  editsection.py  editvalidator.py  editwidget.py  fromjson.py  info_tuple.py  off_piste.py
skipole/templates/: newproj.py
skipoles/: __init__.py
skipoles/projectcode/: __init__.py
skipoles/ski/: dump_project.py  excepts.py  folder_class_definition.py  page_class_definition.py  project_class_definition.py  read_json.py  skiboot.py  tag.py
skipoles/skilift/: __init__.py  editfolder.py  editpage.py  fromjson.py  (+7 more)
(+359 files in other folders)
